--- a/index.html
+++ b/index.html
@@ -3,22 +3,66 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/sitestyle.css">
 	<title>Document</title>
+	<style>
+		body{
+			margin: 0;
+		}
+		.container {
+			display: flex;
+		}
+		.menu {
+			flex-basis: 20%;
+			height: 116vh;
+			background-color: lightblue;
+			color: #fff;
+			padding: 10px;
+			text-align: center;
+			justify-content: center;
+		}
+		.block{
+			flex-basis: 80%;
+		}
+		.header{
+		 	background-color: red;
+		 	padding: 10px;
+		 	height: 100px;
+		 	text-align: center;
+		 	color: #fff;
+		}
+		.block1 {
+			width: 50%;
+			padding: 10px;
+			height: 100vh;
+			background-color: blue;
+		}
+		.block2{
+			width: 50%;
+			padding: 10px;
+			height: 100vh;
+			background-color: green;
+		}
+		.block3{
+			display: flex;
+		}
+	</style>
 </head>
 <body>
-	<div class="title-site">Название сайта!</div>
-	<div class="wrapper">
-		<div class="wrapper-image"><img src="https://img.pngio.com/anime-city-scenery-wallpaper-97-images-in-collection-page-1-animated-scenic-png-1100_900.png" width="100%" ></div>
-			<div class="wrapper-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, odit officia, molestiae sed accusamus, vel id dignissimos dicta libero possimus, laudantium quo. Impedit explicabo corporis nam, eos, cum ex reprehenderit aperiam magnam. Harum cupiditate aut, autem, asperiores exercitationem dicta beatae. Cupiditate at, odit libero blanditiis sequi accusamus consequatur reiciendis voluptates quae ducimus quasi officia reprehenderit iusto aspernatur iure ab perspiciatis eum mollitia cumque illo recusandae quisquam nulla sint esse! Quaerat quibusdam non, in. Hic unde molestias nostrum aliquam, sunt. Provident aliquam vitae recusandae veritatis voluptatem adipisci quas nemo nihil assumenda, iste! Sunt debitis minus excepturi voluptates ab a, expedita atque quasi accusantium aliquid, delectus eius ea consequuntur ipsa cumque aliquam, esse autem fugiat laboriosam? Accusantium ipsam veniam consequatur incidunt sequi voluptatum ab numquam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, odit officia, molestiae sed accusamus, vel id dignissimos dicta libero possimus, laudantium quo. Impedit explicabo corporis nam, eos, cum ex reprehenderit aperiam magnam. Harum cupiditate aut, autem, asperiores exercitationem dicta beatae. Cupiditate at, odit libero blanditiis sequi accusamus consequatur reiciendis voluptates quae ducimus quasi officia reprehenderit iusto aspernatur iure ab perspiciatis eum mollitia cumque illo recusandae quisquam nulla sint esse! Quaerat quibusdam non, in. Hic unde molestias nostrum aliquam, sunt. Provident aliquam vitae recusandae veritatis voluptatem adipisci quas nemo nihil assumenda, iste! Sunt debitis minus excepturi voluptates ab a, expedita atque quasi accusantium aliquid, delectus eius ea consequuntur ipsa cumque aliquam, esse autem fugiat laboriosam? Accusantium ipsam veniam consequatur incidunt sequi voluptatum ab numquam!</div>
-</div>
-	<div class="wrapper-image-slider"><img src="http://getwallpapers.com/wallpaper/full/c/d/9/1408213-anime-city-wallpapers-1920x1200-for-windows-10.jpg" width="100%" height="500px"></div>
-
-	<div class="wrapper">
-		<div class="wrapper-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id praesentium asperiores possimus saepe incidunt nulla reprehenderit perferendis totam. Ullam deserunt cupiditate, adipisci autem. Reprehenderit quod beatae pariatur veniam doloremque itaque asperiores iure. Hic accusantium, sequi beatae tempora autem sunt pariatur aliquid vero totam quod architecto aut incidunt, repellendus, facilis?</div>
-		<div class="wrapper-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id praesentium asperiores possimus saepe incidunt nulla reprehenderit perferendis totam. Ullam deserunt cupiditate, adipisci autem. Reprehenderit quod beatae pariatur veniam doloremque itaque asperiores iure. Hic accusantium, sequi beatae tempora autem sunt pariatur aliquid vero totam quod architecto aut incidunt, repellendus, facilis?</div>
+	<div class="container">
+		<div class="menu">
+			<h1>Меню</h1>
+		</div>
+				<div class="block">
+					<div class="header">
+					<h1>Заголовок</h1>
+					</div>
+				<div class="block3">
+					<div class="block1">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit reprehenderit quas blanditiis id error sequi neque aut ipsam voluptatem iure ratione, mollitia fugit debitis nobis vero, deleniti repellat odit cupiditate praesentium omnis exercitationem. Incidunt consequuntur modi harum porro ut sequi, vitae aperiam alias. Tempora, delectus obcaecati officia voluptatum aspernatur debitis ipsum quo, deleniti? Iure fuga, harum delectus? Non voluptatibus ab quo, nisi qui ducimus doloremque provident obcaecati sed, iure rerum corrupti illo voluptas quia. Blanditiis necessitatibus sint autem doloribus, ex ab veritatis repellat explicabo neque ad sit corrupti, impedit tenetur, delectus unde eligendi dolorum laudantium at architecto consectetur! Rem, libero.
+					</div>
+				<div class="block2">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Repellat, iure temporibus maxime, necessitatibus asperiores, quasi beatae libero deleniti explicabo, placeat et accusantium aliquid. Quidem at quos distinctio sit incidunt expedita unde ut natus eaque officiis assumenda qui corrupti molestiae minima, recusandae, vitae, accusantium porro ipsum maxime! Animi debitis adipisci, laudantium architecto placeat, repudiandae doloremque. Nam necessitatibus ducimus nulla blanditiis culpa officiis pariatur neque asperiores provident tenetur similique saepe, minima incidunt facere perspiciatis esse velit, nemo, nobis ratione ullam? Repellat esse asperiores, mollitia fugiat atque iure autem placeat! Enim est ipsa accusamus quae cum, maxime provident laudantium! Culpa minus labore voluptatibus!</div>
+				</div>
+						</div>
 	</div>
-
-	<div class="btn">touch me!</div>
 </body>
 </html>
