--- a/index.html
+++ b/index.html
@@ -1,68 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<style>
-		body{
-			margin: 0;
-		}
-		.container {
-			display: flex;
-		}
-		.menu {
-			flex-basis: 20%;
-			height: 116vh;
-			background-color: lightblue;
-			color: #fff;
-			padding: 10px;
-			text-align: center;
-			justify-content: center;
-		}
-		.block{
-			flex-basis: 80%;
-		}
-		.header{
-		 	background-color: red;
-		 	padding: 10px;
-		 	height: 100px;
-		 	text-align: center;
-		 	color: #fff;
-		}
-		.block1 {
-			width: 50%;
-			padding: 10px;
-			height: 100vh;
-			background-color: blue;
-		}
-		.block2{
-			width: 50%;
-			padding: 10px;
-			height: 100vh;
-			background-color: green;
-		}
-		.block3{
-			display: flex;
-		}
-	</style>
+<html lang="en"><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+    body {
+        height: 100vh;
+        margin: 0;
+        background-color: #303a52;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .container {
+        display: flex;
+        flex-direction: column;
+        background-color: #fc85ae;
+        height: 300px;
+        width: 200px;
+        border-radius: 5px;
+    }
+    .top-img {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    img {
+        width: 100%;   
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    .text {
+        justify-self: center;
+        text-align: center;
+        padding: .25em;
+    }
+    button {
+        width: 100%;
+        height: 100%;
+        border: 0;
+        color: #fff;
+        background-color: #574b90;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        cursor: pointer;
+    }
+    </style>
 </head>
 <body>
-	<div class="container">
-		<div class="menu">
-			<h1>Меню</h1>
-		</div>
-				<div class="block">
-					<div class="header">
-					<h1>Заголовок</h1>
-					</div>
-				<div class="block3">
-					<div class="block1">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit reprehenderit quas blanditiis id error sequi neque aut ipsam voluptatem iure ratione, mollitia fugit debitis nobis vero, deleniti repellat odit cupiditate praesentium omnis exercitationem. Incidunt consequuntur modi harum porro ut sequi, vitae aperiam alias. Tempora, delectus obcaecati officia voluptatum aspernatur debitis ipsum quo, deleniti? Iure fuga, harum delectus? Non voluptatibus ab quo, nisi qui ducimus doloremque provident obcaecati sed, iure rerum corrupti illo voluptas quia. Blanditiis necessitatibus sint autem doloribus, ex ab veritatis repellat explicabo neque ad sit corrupti, impedit tenetur, delectus unde eligendi dolorum laudantium at architecto consectetur! Rem, libero.
-					</div>
-				<div class="block2">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Repellat, iure temporibus maxime, necessitatibus asperiores, quasi beatae libero deleniti explicabo, placeat et accusantium aliquid. Quidem at quos distinctio sit incidunt expedita unde ut natus eaque officiis assumenda qui corrupti molestiae minima, recusandae, vitae, accusantium porro ipsum maxime! Animi debitis adipisci, laudantium architecto placeat, repudiandae doloremque. Nam necessitatibus ducimus nulla blanditiis culpa officiis pariatur neque asperiores provident tenetur similique saepe, minima incidunt facere perspiciatis esse velit, nemo, nobis ratione ullam? Repellat esse asperiores, mollitia fugiat atque iure autem placeat! Enim est ipsa accusamus quae cum, maxime provident laudantium! Culpa minus labore voluptatibus!</div>
-				</div>
-						</div>
-	</div>
-</body>
-</html>
+    <div class="container">
+        <div class="top-img">
+            <img src="img/img.jpg" alt="">
+        </div>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit adipisci quo odio sunt eius veritatis at quisquam ad
+            dolor.
+        </p>
+        <button>Learn more</button>
+    </div>
+    <div class="container">
+        <div class="top-img">
+            <img src="img/img.jpg" alt="">
+        </div>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit adipisci quo odio sunt eius veritatis at
+            quisquam ad
+            dolor.
+        </p>
+        <button>Learn more</button>
+    </div>
+    <div class="container">
+        <div class="top-img">
+            <img src="img/img.jpg" alt="">
+        </div>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit adipisci quo odio sunt eius veritatis at
+            quisquam ad
+            dolor.
+        </p>
+        <button>Learn more</button>
+    </div>
+
+</body></html>
