--- a/index.html
+++ b/index.html
@@ -1,85 +1,55 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My lessons</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="//animebase.su/templates/dark/css/animate.css">
     <style>
-    body {
-        height: 100vh;
-        margin: 0;
-        background-color: #303a52;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-    .container {
-        display: flex;
-        flex-direction: column;
-        background-color: #fc85ae;
-        height: 300px;
-        width: 200px;
-        border-radius: 5px;
-    }
-    .top-img {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-    img {
-        width: 100%;   
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-    }
-    .text {
-        justify-self: center;
-        text-align: center;
-        padding: .25em;
-    }
-    button {
-        width: 100%;
-        height: 100%;
-        border: 0;
-        color: #fff;
-        background-color: #574b90;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
-        cursor: pointer;
-    }
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: rgb(6, 3, 48);
+            font-family: 'Reggae One', cursive;
+        }
+        nav {
+            display: flex;
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        a {
+            text-decoration: none;
+            color: rgb(6, 3, 48);
+            font-weight: 700;
+            background-color: rgb(233, 230, 230);
+            box-shadow: 0px 0px 30px 0px #fff;
+            padding: 10px;
+            margin: 10px;
+            transition: all 1s;
+        }
+        a:hover {
+            background-color: rgb(255, 0, 0);
+            box-shadow: 0px 0px 30px 0px #000;
+        }
     </style>
 </head>
-<body>
-    <div class="container">
-        <div class="top-img">
-            <img src="img/img.jpg" alt="">
-        </div>
-        <p class="text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit adipisci quo odio sunt eius veritatis at quisquam ad
-            dolor.
-        </p>
-        <button>Learn more</button>
-    </div>
-    <div class="container">
-        <div class="top-img">
-            <img src="img/img.jpg" alt="">
-        </div>
-        <p class="text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit adipisci quo odio sunt eius veritatis at
-            quisquam ad
-            dolor.
-        </p>
-        <button>Learn more</button>
-    </div>
-    <div class="container">
-        <div class="top-img">
-            <img src="img/img.jpg" alt="">
-        </div>
-        <p class="text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit adipisci quo odio sunt eius veritatis at
-            quisquam ad
-            dolor.
-        </p>
-        <button>Learn more</button>
-    </div>
 
-</body></html>
+<body>
+    <nav>
+        <a href="/all_lessons/lesson_1.html" class="nav__link wow fadeInLeft">Lesson 1</a>
+        <a href="/all_lessons/lesson_2.html" class="nav__link wow fadeInUp">Lesson 2</a>
+        <a href="" class="nav__link wow fadeInRight">Lesson 3</a>
+    </nav>
+<script src="//animebase.su/templates/dark/js/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
+</body>
+
+</html>
