--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <nav>
         <a href="/all_lessons/lesson_1.html" class="nav__link wow fadeInLeft">Lesson 1</a>
         <a href="/all_lessons/lesson_2.html" class="nav__link wow fadeInUp">Lesson 2</a>
-        <a href="/all_lessons/lesson_3.html" class="nav__link wow fadeInRight">Lesson 3</a>
+        <a href="/all_lessons/lesson_3.html" class="nav__link wow fadeInUp">Lesson 3</a>
+        <a href="/all_lessons/lesson_4.html" class="nav__link wow fadeInRight">Lesson 4</a>
     </nav>
 <script src="//animebase.su/templates/dark/js/wow.min.js"></script>
 <script>
