--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         <a href="/all_lessons/lesson_1.html" class="nav__link wow fadeInLeft">Lesson 1</a>
         <a href="/all_lessons/lesson_2.html" class="nav__link wow fadeInUp">Lesson 2</a>
         <a href="/all_lessons/lesson_3.html" class="nav__link wow fadeInUp">Lesson 3</a>
-        <a href="/all_lessons/lesson_4.html" class="nav__link wow fadeInRight">Lesson 4</a>
+        <a href="/all_lessons/lesson_4.html" class="nav__link wow fadeInUp">Lesson 4</a>
+        <a href="/all_lessons/lesson_5.html" class="nav__link wow fadeInUp">Lesson 5</a>
+        <a href="/all_lessons/lesson_6.html" class="nav__link wow fadeInUp">Lesson 6</a>
+        <a href="/all_lessons/lesson_7.html" class="nav__link wow fadeInUp">Lesson 7</a>
+        <a href="/all_lessons/lesson_8.html" class="nav__link wow fadeInRight">Lesson 8</a>
     </nav>
 <script src="//animebase.su/templates/dark/js/wow.min.js"></script>
 <script>
