--- a/all_lessons/lesson_7.html
+++ b/all_lessons/lesson_7.html
@@ -37,7 +37,7 @@
         }
         svg:nth-last-of-type(1) {
             left: -40px;
-            background: url(img/ship.png);
+            background: url(../img/ship.png);
             background-repeat: no-repeat;
             background-size: contain;
             animation: wave 4s .4s ease-in infinite;
