--- a/all_lessons/lesson_8.html
+++ b/all_lessons/lesson_8.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         .image {
-            background: url(img/background_2.png) no-repeat center ;
+            background: url(../img/background_2.png) no-repeat center ;
             height: 100vh;
         }
     </style>
