--- a/all_lessons/lesson_8.html
+++ b/all_lessons/lesson_8.html
@@ -7,15 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .image {
-            background: url(../img/background_2.png) no-repeat center ;
-            height: 100vh;
+        * {
+            margin: 0;
         }
+        .img_norm {
+            background-image: url(img/night.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        }
+
+    span {
+        display: flex;
+        align-items: center;
+        padding: 50px;
+        background-color: #7946;
+    }
+    .img_rotate {
+        background-image: url(img/night.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    transform: rotate(180deg);
+}
     </style>
 </head>
 
 <body>
-    <div class="image"></div>
+    <div class="container">
+        <div class="img_norm"></div>
+        <span class="text__center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.
+            То знаках дал взгляд использовало текста города собрал переулка жаренные сбить она. Семантика, строчка. Меня
+            по всей они, путь возвращайся взобравшись собрал переписывается свой, вопрос несколько пояс своих оксмокс
+            безорфографичный текстов предупредила что выйти семантика подпоясал. Его собрал толку встретил снова он
+            деревни! Это жизни, правилами на берегу lorem родного грамматики деревни.</span>
+        <div class="img_rotate"></div>
+    </div>
 </body>
 
 </html>
