--- a/all_lessons/lesson_8.html
+++ b/all_lessons/lesson_8.html
@@ -11,7 +11,7 @@
             margin: 0;
         }
         .img_norm {
-            background-image: url(img/night.jpg);
+            background-image: url(../img/night.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -29,7 +29,7 @@
         background-color: #7946;
     }
     .img_rotate {
-        background-image: url(img/night.jpg);
+        background-image: url(../img/night.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
