--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <a href="/all_lessons/lesson_5.html" class="nav__link wow fadeInUp">Lesson 5</a>
         <a href="/all_lessons/lesson_6.html" class="nav__link wow fadeInUp">Lesson 6</a>
         <a href="/all_lessons/lesson_7.html" class="nav__link wow fadeInUp">Lesson 7</a>
-        <a href="/all_lessons/lesson_8.html" class="nav__link wow fadeInRight">Lesson 8</a>
+        <a href="/all_lessons/lesson_8.html" class="nav__link wow fadeInUp">Lesson 8</a>
+        <a href="/all_lessons/lesson_9.html" class="nav__link wow fadeInUp">Lesson 9</a>
+        <a href="/all_lessons/lesson_10.html" class="nav__link wow fadeInRight">Lesson 10</a>
     </nav>
 <script src="//animebase.su/templates/dark/js/wow.min.js"></script>
 <script>
